Fix buttonoverlap in navbar

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,6 +4,8 @@ html {
   --primary-color: #1c1c1c;
   --primary-color-1: rgba(43, 43, 43, 0.5);
   --secondary-color: #ffffff;
+  --secondary-color-1: #00ffff;
+  --primary-color-2: #000000e6;
 
   /* for rem value */
   font-size: 62.5%;
@@ -285,7 +287,7 @@ input:checked + label .fa-moon {
   border-radius: 1rem;
   height: 4rem;
   /* width: 30rem; */
-  color: var(--primary-color-1);
+  color: rgba(43, 43, 43, 0.5);
   text-align: start;
   border: 2px solid var(--primary-color-1);
   padding: 5px;
